welcome.lessons.welcome.loopdowhile.LoopDoWhile.scala.error
Program:2: error: '(' expected but '{' found.
do{avance()}while{(!estSurBlanc())} 
                 ^